--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: just_audio
+name: just_audio_desktop
 description: Flutter plugin to play audio from streams, files, assets, DASH/HLS streams and playlists. Works with audio_service to play audio in the background.
 version: 0.4.4
 homepage: https://github.com/ryanheise/just_audio
@@ -26,16 +26,6 @@ dev_dependencies:
 flutter:
   plugin:
     platforms:
-      android:
-        package: com.ryanheise.just_audio
-        pluginClass: JustAudioPlugin
-      ios:
-        pluginClass: JustAudioPlugin
-      macos:
-        pluginClass: JustAudioPlugin
-      web:
-        pluginClass: JustAudioPlugin
-        fileName: just_audio_web.dart
       windows:
         pluginClass: JustAudioPlugin
         fileName: just_audio_desktop.dart
